object scale changes tangent node output in Eevee #62621

Closed
opened 2019-03-15 19:27:14 +01:00 by MACHIN3 · 9 comments

System Information
Operating system: Linux-4.13.10-041310-generic-x86_64-with-debian-stretch-sid 64 Bits
Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.67

Blender Version
Broken: version: 2.80 (sub 48), branch: blender2.7, commit date: 2019-03-14 22:54, hash: 35b78d9807
Worked: bf9904ec80

Short description of error
Depending on the object scale, the tangent node will output different vectors in Eevee. In Cycles scale has no effect on it.
In bf9904ec80, this was not an issue either.

Exact steps for others to reproduce the error

  • open attached blend
  • scale one of the planes down and notice how the color changes (slightly)
  • apply the scale and it matches the other, unscaled plane's color again
  • optionally pipe in the transform node to check on different colors
  • also compare in cycles and in bf9904ec80, to find no such change in output/color
  • see https://www.youtube.com/watch?v=_qlhz7R02rQ for a video demo

object_scale_changes_tangent_node_output_in_eevee.blend

**System Information** Operating system: Linux-4.13.10-041310-generic-x86_64-with-debian-stretch-sid 64 Bits Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.67 **Blender Version** Broken: version: 2.80 (sub 48), branch: blender2.7, commit date: 2019-03-14 22:54, hash: `35b78d9807` Worked: bf9904ec80 **Short description of error** Depending on the object scale, the tangent node will output different vectors in Eevee. In Cycles scale has no effect on it. In bf9904ec80, this was not an issue either. **Exact steps for others to reproduce the error** * open attached blend * scale one of the planes down and notice how the color changes (slightly) * apply the scale and it matches the other, unscaled plane's color again * optionally pipe in the transform node to check on different colors * also compare in cycles and in bf9904ec80, to find no such change in output/color * see https://www.youtube.com/watch?v=_qlhz7R02rQ for a video demo [object_scale_changes_tangent_node_output_in_eevee.blend](https://archive.blender.org/developer/F6830818/object_scale_changes_tangent_node_output_in_eevee.blend)
Author

Added subscriber: @MACHIN3

Added subscriber: @MACHIN3
Author

I suspect 7fb7d20c19 is causing this.

I suspect 7fb7d20c19 is causing this.

Added subscribers: @fclem, @brecht

Added subscribers: @fclem, @brecht
Clément Foucault was assigned by Brecht Van Lommel 2019-03-15 20:01:43 +01:00

@fclem, for the mikktspace tangent that Blender (and other apps) use, the tangents are intended to be interpolated without normalization.
https://archive.blender.org/wiki/index.php/Dev:Shading/Tangent_Space_Normal_Maps/#Pixel_Shader_Transformation

@fclem, for the mikktspace tangent that Blender (and other apps) use, the tangents are intended to be interpolated without normalization. https://archive.blender.org/wiki/index.php/Dev:Shading/Tangent_Space_Normal_Maps/#Pixel_Shader_Transformation

@brecht while I'm all in fixing the normalize issue, this report is completely unrelated. The NormalMatrix is not normalize and thus does not produce normalized vector after the rotation. I'm fixing both issue...

@brecht while I'm all in fixing the normalize issue, this report is completely unrelated. The NormalMatrix is not normalize and thus does not produce normalized vector after the rotation. I'm fixing both issue...

This issue was referenced by 86646dab7c

This issue was referenced by 86646dab7c455e739e5d648d0857bf30fd81afb9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by cc1b193ddf

This issue was referenced by cc1b193ddf3868ff508b82d42d36f7e769730323

This issue was referenced by 27109fd209

This issue was referenced by 27109fd209ca572445d9ec27b7f220b01001bf5b
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62621
No description provided.