Fix T62621 object scale changes tangent node output in Eevee

Normal Matrices were not normalized, leading to non-normalized vector
rotations results.